organizing file and folder names

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Taylor Swift Fan Site</title>
+    <title>Palma y Lola</title>
     <meta charset="utf-8" />
 
      <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&display=swap" rel="stylesheet">
@@ -24,7 +24,7 @@
       <p>Your source for all things Taylor!</p>
       <img src="images/taylorforrest.png" alt="Taylor" title="Taylor in forrest" width="500"/>
 
-      <h2>Listen to her latest album "Folklore" out now!</h2>
+      <h2>Listealbum "Folklore" out now!</h2>
 
       <p>You can stream it <a href="https://taylorswift.com/">here</a>.</p>
 
