--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </header>
 
     <main>
-      <h1>Taylor Swift Fan Page</h1>
-      <p>Your source for all things Taylor!</p>
+      <h1>Palma y Lola Shop</h1>
+      <p>Handmade Colombian artisan hand bags</p>
       <img src="images/taylorforrest.png" alt="Taylor" title="Taylor in forrest" width="500"/>
 
       <h2>Listealbum "Folklore" out now!</h2>
