--- a/index.html
+++ b/index.html
@@ -21,20 +21,21 @@
 
     <main>
       <h1>Palma y Lola Shop</h1>
-      <p>Handmade Colombian artisan hand bags</p>
-      <img src="images/taylorforrest.png" alt="Taylor" title="Taylor in forrest" width="500"/>
+      <p>Hand-woven Colombian Artisan Purses</p>
+      <img src="images/greenpurse.png" alt="Green Purse" title="Green Purse" width="500"/>
 
       <h2>Listealbum "Folklore" out now!</h2>
 
-      <p>You can stream it <a href="https://taylorswift.com/">here</a>.</p>
+      <p>You can shop all designs <a href="https://www.etsy.com/il-en/shop/PalmayLola?ref=nla_listing_details">here</a>.</p>
 
-      <p> It is the eighth studio album by Taylor Swift. It was a surprise album, released through Republic Records on July 24, 2020. It an indie folk, alternative rock, electro-folk, and chamber pop album.</p>
+      <p> Palma y Lola is a Colombian accessory brand inspired by tropical climates and warm golden sunshine. It is a collection of fresh and unique designs made entirely from the Iraca Palm native to the country. <span>Local Colombian artisans hand-weave each and every item for a personalized and culturally rich result.</span></p>
 
 
       <h2>Fashion Statement of the Week:</h2>
-        <img src="images/taylorstreetstyle.png" alt="TaylorNYC" title="Taylor in NYC" width="150"/>
 
-      <h3>Check back weekly for updates!</h3>
+        <img src="images/strawweaving.png" alt="Weaving" title="Weaving in action" width="150"/>
+
+      <h3>Check back weekly for shop updates!</h3>
 
 
 
@@ -44,4 +45,6 @@
 
 
   </body>
+
+
 </html>
