--- a/index.html
+++ b/index.html
@@ -21,21 +21,35 @@
 
     <main>
       <h1>Palma y Lola Shop</h1>
+
+          <h2>You can shop all designs <a href="https://www.etsy.com/il-en/shop/PalmayLola?ref=nla_listing_details">here</a>.</h2>
+
+
       <p>Hand-woven Colombian Artisan Purses</p>
-      <img src="images/greenpurse.png" alt="Green Purse" title="Green Purse" width="500"/>
 
-      <h2>Listealbum "Folklore" out now!</h2>
-
-      <p>You can shop all designs <a href="https://www.etsy.com/il-en/shop/PalmayLola?ref=nla_listing_details">here</a>.</p>
-
-      <p> Palma y Lola is a Colombian accessory brand inspired by tropical climates and warm golden sunshine. It is a collection of fresh and unique designs made entirely from the Iraca Palm native to the country. <span>Local Colombian artisans hand-weave each and every item for a personalized and culturally rich result.</span></p>
+      <img class="greenpurse"<img src="images/greenpurse.png" alt="Green Purse" title="Green Purse" width="500"/>
 
 
-      <h2>Fashion Statement of the Week:</h2>
 
-        <img src="images/strawweaving.png" alt="Weaving" title="Weaving in action" width="150"/>
+
+
+      <h2>All items made from the Iraca Palm</h2>
+
+      <img src="images/blue.png" height="100" width="100" alt="Image" style="float: left; margin: 10px 20px 10px 350px; border: 1px solid #000000;">
+
+
+      <p> Palma y Lola is a Colombian accessory brand inspired by tropical climates and warm golden sunshine. It is a collection of fresh and unique designs made entirely from the Iraca Palm native to the country. <span class="custom-text">Local Colombian Artisans</span> hand-weave each and every product.</p>
+
+
+      <h2>Available in different colors and styles!</h2>
+
+        <img class="palmart"<img src="images/strawweaving.png" alt="Weaving" title="Weaving in action" width="150"/>
 
       <h3>Check back weekly for shop updates!</h3>
+
+      <div class="logo">
+        <img class="logo" src="images/palmaylola.png" alt="logo" title="logo" />
+      </div>
 
 
 
