--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <header>
       <nav>
+
         <ul>
           <li><a href="index.html">Home</a></li>
         </ul>
@@ -22,15 +23,10 @@
     <main>
       <h1>Palma y Lola Shop</h1>
 
-          <h2>You can shop all designs <a href="https://www.etsy.com/il-en/shop/PalmayLola?ref=nla_listing_details">here</a>.</h2>
+          <h2>You can shop all designs <a href="https://www.etsy.com/il-en/shop/PalmayLola?ref=nla_listing_details" target="_blank">here</a>.</h2>
 
-
-      <p>Hand-woven Colombian Artisan Purses</p>
 
       <img class="greenpurse"<img src="images/greenpurse.png" alt="Green Purse" title="Green Purse" width="500"/>
-
-
-
 
 
       <h2>All items made from the Iraca Palm</h2>
@@ -45,7 +41,7 @@
 
         <img class="palmart"<img src="images/strawweaving.png" alt="Weaving" title="Weaving in action" width="150"/>
 
-      <h3>Check back weekly for shop updates!</h3>
+      <h3>Hand-woven Colombian purses and accessories</h3>
 
       <div class="logo">
         <img class="logo" src="images/palmaylola.png" alt="logo" title="logo" />
