fixed html errors

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
           <h2>You can shop all designs <a href="https://www.etsy.com/il-en/shop/PalmayLola?ref=nla_listing_details" target="_blank">here</a>.</h2>
 
 
-      <img class="greenpurse"<img src="images/greenpurse.png" alt="Green Purse" title="Green Purse" width="500"/>
+      <img class="greenpurse" src="images/greenpurse.png" alt="Green Purse" />
+
 
 
       <h2>All items made from the Iraca Palm</h2>
+
 
       <img src="images/blue.png" height="100" width="100" alt="Image" style="float: left; margin: 10px 20px 10px 350px; border: 1px solid #000000;">
 
@@ -39,15 +41,14 @@
 
       <h2>Available in different colors and styles!</h2>
 
-        <img class="palmart"<img src="images/strawweaving.png" alt="Weaving" title="Weaving in action" width="150"/>
+        <img class="palmart" src="images/strawweaving.png" alt="Weaving" />
+
 
       <h3>Hand-woven Colombian purses and accessories</h3>
 
       <div class="logo">
         <img class="logo" src="images/palmaylola.png" alt="logo" title="logo" />
       </div>
-
-
 
     </main>
 
